--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ deploy:
   on:
     branch: master # deploy only when main gets a change of code
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
