--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   region: "eu-west-2"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "arn:aws:s3:::elasticbeanstalk-eu-west-2-210226449536"
+  bucket_name: "elasticbeanstalk-eu-west-2-210226449536"
   bucket_path: "docker-react"
   on:
     branch: master # deploy only when main gets a change of code
